xx May 2009: 1.0.0 Miek <miek@miek.nl>
  - 1.0.0 release! -
  * tests: more DejaGNU tests added
  * rdup-tr: exit when -X/-Y used and we are compiled with encryption


03 May 2009: 0.9.9 Miek <miek@miek.nl>
  - bugfix release -
  * rdup-simple: use blowfish for ssh
  * rdup-up: set the owner and group for everything you create
  * tests: added dejagnu based tests; 'make check' performs the
    testing. You'll need dejagnu for it to work.


16 Apr 2009: 0.9.1 Miek <miek@miek.nl>
  - bugfixes only -
  * rdup*: code cleanups
  * rdup -c: fix the block based output (Reported by Jared Henley)
  * documentation tweaks


01 Mar 2009: 0.9.0 Miek <miek@miek.nl>
  - major (lowlevel) feature enhancements - 
  - again: internal file list change -
  * internal filelist: add uid/gid here. Why? See 
    http://www.miek.nl/blog/archives/2009/02/21/backing_up_remotely_as_a_normal_user/index.html
  * rdup*: make the -c output block based:
    Every BUFSIZE bytes a block is started.
    The last block is signaled with a size
    of 0. This eliminates the race condition,
    removes an extra stat() for every file
    and makes rdup-tr not use any temporary
    files. (Idea from: John Goerzen)
  * rdup: -c output changes for files: use blocks
  * rdup: -l switch is not needed anymore, so removed
  * rdup: add -M same as -N but check the mtime of the
    timestamp file
  * rdup-up: expects the new -c format as input
  * rdup-up: better handle non-writable directories;
    make them temp. writable (if possible)
  * rdup-tr: add path encryption/decryption. Not only
    can you encrypt the files' contents but also
    the actual file names. See options -X and -Y.
  * rdup*: shaved off 1 byte from the r_entry struct
  * rdup*: nicer unknown argument handling


14 Feb 2009: 0.7.1 Miek <miek@miek.nl>
  * rdup*: solaris fixes. It now compiles and
    runs on solaris
  * rdup: change configure so that it will check
    for a newer function in libarchive. If this