@@ -7,7 +7,7 @@
 [\fI\-N timestamp\fR]
 [\fIOPTION\fR]...
 \fIFILELIST\fR
-\fIDIR/FILE...\fR
+[\fIDIR/FILE]...\fR
 
 .SH DESCRIPTION
 \fBrdup\fR is a utility inspired by rsync and the plan9 way of doing
@@ -63,7 +63,7 @@ is useful when only doing full backups and you want all files to be printed.
 The
 .IR DIRS/FILES
 can be specified multiple times. These are the directories and files
-you want to backup. 
+you want to backup. If omitted it defaults to the current directory (.).
 .PP
 If the \fI\-N timestamp\fR option is not given, all paths found are
 printed. Only when a \fI\-N timestamp\fR file is given, times can be
