@@ -1,7 +1,10 @@
 xx May 2009: 1.0.0 Miek <miek@miek.nl>
   - 1.0.0 release! -
   * tests: more DejaGNU tests added
-  * rdup-tr: exit when -X/-Y used and we are compiled with encryption
+  * rdup-tr: exit when -X/-Y used and we are compiled without encryption
+  * rdup-up: with -v write to stderr
+  * rdup-up: added -vv write uid/gid and filename to stderr
+  * rdup: default to . when no directories/files are provided
 
 
 03 May 2009: 0.9.9 Miek <miek@miek.nl>
